[package]
name = "serial"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bitflags = { version = "2.5.0", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serialport = { version = "4.3.0", features = ["serde"] }
